--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,12 @@
+body {
+    font-family: 'Josefin Sans', sans-serif;
+}
+
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Roboto', sans-serif;
 font-family: 'Josefin Sans', sans-serif; */
+
+/* SPLASH */
 
 /* SPLASH */
 
