--- a/public/style.css
+++ b/public/style.css
@@ -11,30 +11,29 @@ font-family: 'Josefin Sans', sans-serif; */
 /* HEADER */
 
 .nav-container {
-    display: flex;
-    justify-content: space-between;
     background-color: black;
 }
 
 .logo-container {
-
+    padding-left: 35px;
+    padding-top: 15px;
 }
 
 .logo-text {
     font-family: 'Press Start 2P', cursive;
     letter-spacing: 2px;
-    font-size: 32px;
 }
 
 .nav-button {
-
+    padding-right: 35px;
+    padding-top: 15px;
 }
 
 .create-dove-button {
   min-height: 35px;
-  color: #2e2e2e;
-  background-color: #FFFFFF;
-  border: 2px solid #2e2e2e;
+  color: white;
+  background-color: transparent;
+  border: 2px solid #white;
   border-radius: 5px;
   font-size: 18px;
   text-transform: uppercase;
@@ -81,7 +80,7 @@ font-family: 'Josefin Sans', sans-serif; */
 
 /* SPLASH */
 
-.splash-container {
+.nav-container {
     height: 300px;
     width: 100%;
 }
@@ -90,11 +89,13 @@ font-family: 'Josefin Sans', sans-serif; */
     color: white;
 }
 
-.splash-content {
+.nav-content {
     z-index: 10;
+    display: flex;
+    justify-content: space-between;
 }
 
-.stars, .twinkling, .clouds, .splash-content {
+.stars, .twinkling, .clouds, .nav-content {
   width:100%;
   height:300px;
   position: absolute;
@@ -170,7 +171,8 @@ font-family: 'Josefin Sans', sans-serif; */
 }
 
 .table-container {
-    background-color: 
+    display: flex;
+    justify-content: center;
 }
 
 .all-doves-table {
