--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     background-color: black;
     color: white;
 }
@@ -17,6 +17,8 @@ font-family: 'Josefin Sans', sans-serif; */
 .logo-container {
     padding-left: 35px;
     padding-top: 15px;
+    display: flex;
+    flex-direction: row;
 }
 
 .logo-text {
@@ -26,14 +28,14 @@ font-family: 'Josefin Sans', sans-serif; */
 
 .nav-button {
     padding-right: 35px;
-    padding-top: 15px;
+    padding-top: 23px;
 }
 
 .create-dove-button {
   min-height: 35px;
   color: white;
   background-color: transparent;
-  border: 2px solid #white;
+  border: 2px solid #e5e5e5;
   border-radius: 5px;
   font-size: 18px;
   text-transform: uppercase;
@@ -43,13 +45,15 @@ font-family: 'Josefin Sans', sans-serif; */
 
 .create-dove-button:hover {
   box-shadow: 0 0 11px rgba(33,33,33,.2);
-  background-color: #E4CB72;
+  background-color: #e5e5e5;
+  color: black;
 }
+  
 
 /* MODAL */
 
 .modal-form-container {
-
+    color: black;
 }
 
 .create-form-box {
@@ -57,6 +61,15 @@ font-family: 'Josefin Sans', sans-serif; */
 }
 
 .modal-logo {
+    font-family: 'Press Start 2P', cursive;
+    letter-spacing: 2px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-size: 22px;
+}
+
+.modal-logo-text {
 
 }
 
@@ -68,25 +81,52 @@ font-family: 'Josefin Sans', sans-serif; */
 
 }
 
-.modal-input {
-
-}
 
 .modal-button-container {
 
 }
 
 
-
-/* SPLASH */
-
-.nav-container {
-    height: 300px;
-    width: 100%;
+.modal-input {
+  width: 100%;
+  height: 25px;
+  font-size: 20px;
+  border: 2px solid #2e2e2e;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 5px;
 }
 
-.splash-text {
-    color: white;
+.modal-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.modal-button:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+  background-color: black;
+  color: white;
+}
+
+.modal-button {
+  min-height: 35px;
+  color: #2e2e2e;
+  background-color: #FFFFFF;
+  border: 2px solid #2e2e2e;
+  border-radius: 5px;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin: 10px;
+}
+
+
+/* NAV ANIMATIONS */
+
+.nav-container {
+    height: 120px;
+    width: 100%;
 }
 
 .nav-content {
@@ -95,19 +135,19 @@ font-family: 'Josefin Sans', sans-serif; */
     justify-content: space-between;
 }
 
-.stars, .twinkling, .clouds, .nav-content {
+.stars1, .twinkling1, .clouds1, .nav-content {
   width:100%;
-  height:300px;
+  height:120px;
   position: absolute;
 }
 
 
-.stars {
+.stars1 {
   background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
   z-index:0;
 }
 
-.twinkling{
+.twinkling1 {
   background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
   z-index:1;
 
@@ -118,7 +158,77 @@ font-family: 'Josefin Sans', sans-serif; */
   animation:move-twink-back 200s linear infinite;
 }
 
-.clouds{
+.clouds1 {
+    background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
+    z-index:3;
+
+  -moz-animation:move-clouds-back 200s linear infinite;
+  -ms-animation:move-clouds-back 200s linear infinite;
+  -o-animation:move-clouds-back 200s linear infinite;
+  -webkit-animation:move-clouds-back 200s linear infinite;
+  animation:move-clouds-back 200s linear infinite;
+}
+
+@keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-webkit-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-moz-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+@-ms-keyframes move-twink-back {
+    from {background-position:0 0;}
+    to {background-position:-10000px 5000px;}
+}
+
+@keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-webkit-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-moz-keyframes move-clouds-back {
+    from {background-position:0 0;}
+    to {background-position:10000px 0;}
+}
+@-ms-keyframes move-clouds-back {
+    from {background-position: 0;}
+    to {background-position:10000px 0;}
+} 
+
+/* MAIN ANIMATIO  */
+
+.stars2, .twinkling2, .clouds2, .animation-container {
+  width:100%;
+  height:2000px;
+  position: absolute;
+}
+
+
+.stars2 {
+  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  z-index:0;
+}
+
+.twinkling2 {
+  background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
+  z-index:1;
+
+  -moz-animation:move-twink-back 200s linear infinite;
+  -ms-animation:move-twink-back 200s linear infinite;
+  -o-animation:move-twink-back 200s linear infinite;
+  -webkit-animation:move-twink-back 200s linear infinite;
+  animation:move-twink-back 200s linear infinite;
+}
+
+.clouds2 {
     background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
     z-index:3;
 
@@ -167,15 +277,39 @@ font-family: 'Josefin Sans', sans-serif; */
 /* ALL DOVES */
 
 .all-doves-container {
-
-}
-
-.table-container {
     display: flex;
     justify-content: center;
 }
 
-.all-doves-table {
-    background-color: #2e2e38;
+.table-container {
+    z-index: 10;
+    position: absolute;
+    height: 100%;
+    
 }
 
+.all-doves-table {
+  background-color: #2e2e38;
+  opacity: 0.8; 
+}
+
+.table-title {
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 24px;
+}
+
+.delete-dove-button {
+  color: white;
+  background-color: transparent;
+  border: 2px solid #e5e5e5;
+  border-radius: 5px;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.delete-dove-button:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+  background-color: #e5e5e5;
+  color: black;
+}
